# challenge4

./: Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .dockerignore  .env  .env.example  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: announcement_agent.py  crowd_agent.py  dispatch_agent.py  intent_router.py  lost_found_agent.py  navigation_agent.py  ops_agent.py  surge_forecaster.py  transport_agent.py  wellbeing_agent.py
backend/app/config/: settings.py
backend/app/data/: routes.json
backend/app/graph/: stadium_graph.py
backend/app/models/: context.py  schemas.py
backend/app/routes/: announcements.py  chat.py  crowd.py  dispatch.py  incidents.py  lost_found.py  session.py  wellbeing.py
backend/app/services/: gemini_client.py  input_sanitizer.py  rate_limiter.py  repository.py
backend/tests/: conftest.py  test_crowd_agent.py  test_graph.py  test_intent_router.py  test_lost_found_agent.py  test_navigation_agent.py  test_ops_dispatch.py  test_routes.py  test_surge_forecaster.py  test_transport_agent.py  test_wellbeing_announcement.py
frontend/: Dockerfile  package-lock.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ChatInterface.tsx  Splash.tsx
frontend/src/hooks/: useChat.ts
frontend/src/pages/: FanDashboard.tsx  OrganizerDashboard.tsx
